fix: Improve Help page on mobile devices
The new Try It Now help section makes the page too wide. A minor CSS
tweak makes better use of the horizontal space on mobile now.

--- a/public/components/help/help.css
+++ b/public/components/help/help.css
@@ -35,6 +35,8 @@
     margin-bottom: 0.8em;
 }
 
-.faqs .panel-group {
-    margin-left: 2em;
+@media (min-width: 450px) {
+    .faqs .panel-group {
+        margin-left: 2em;
+    }
 }
